--- a/M4U1/transportes/frontend/src/App.css
+++ b/M4U1/transportes/frontend/src/App.css
@@ -36,3 +36,37 @@
     transform: rotate(360deg);
   }
 }
+
+form{
+  width: 450px;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  border-radius: 7px;
+}
+
+input, textarea{
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 7px;
+  box-sizing: border-box;
+  border: none;
+}
+
+h2{
+  color: #f80209;
+  text-align: center;
+  margin: 0;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+textarea{
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
+  min-width: 100%;
+}
+
