--- a/M4U1/transportes/frontend/src/styles/layout.css
+++ b/M4U1/transportes/frontend/src/styles/layout.css
@@ -1,3 +1,19 @@
+header {
+    background-color: white;
+    padding: 16px 0;
+    /* margin-left: 400px; */
+}
+
+header h2 {
+    color: black;
+    display: inline-block;
+    position: relative;
+    margin-top: 50px; 
+    bottom: 0px;
+    margin-left: 0px;
+}
+
+
 footer {
     background-color: black;
     text-align: center;
@@ -8,25 +24,33 @@ footer {
 }
 
 nav {
-    background-color: white;
-    margin-bottom: 20px;
+    background-color: rgb(236, 7, 7);
+    margin-bottom: 70px;
+    padding: 10px 0;
+    
 }
 
 nav ul {
     list-style: none;
     margin: 0;
-    padding: 20px;
-    display: inline-flex;
+    padding: 0;
+    display: flex; 
 }
 
 nav ul li {
-margin: 40px;
-
+flex-grow: 1;
 }
 
 nav ul li a {
     color: black;
     text-decoration: none;
+    padding: 3px 6px;
+    display: block;
+    text-align: center;
     font-size: 20px;
     font-weight: 800;
 }
+
+/* nav ul li a.activo {
+    background-color: beige;
+} */
